src/test/deca/context/invalid/SansObjet/DeclVar-stringFloat.deca
// Description:
//    Declaration of a string variable with initialization.
// 
// Results:
//     Incompatible type asignement error
// 
// Historique: 
//    cree le 11/01/2022 

{
    string x = 0.1 ;
}
